# ShopSmartAI

./: .replit  db.sqlite3  pyproject.toml  replit.md  setup.py
ecommerce/: models.py  recommendation_engine.c  recommendation_engine.py  recommendation_engine.pyx  recommendation_service.py  urls.py  views.py
ecommerce/management/commands/: populate_data.py
ecommerce/migrations/: 0001_initial.py
ecommerce/templates/ecommerce/: base.html  cart.html  checkout.html  home.html  order_success.html  product_detail.html  product_list.html
ecommerce_platform/: settings.py  urls.py
